--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
         <head>
             <title>My page!!!</title>
-            <link rel="stylesheet" type="text/css" href="static/style.css">
+            <link rel="stylesheet" type="text/css" href="static/Backgroundimg.css">
         </head>
         <body>
 		
