--- a/flask_app/templates/logout.html
+++ b/flask_app/templates/logout.html
@@ -3,10 +3,16 @@
 
       <title>Logout</title>
 
-	  <link rel="stylesheet" type="text/css" href="style.css" />
+	  <link rel="stylesheet" type="text/css" href="logout.css" />
+	  
 
     </head>
-    <body>
-        You have been logged out.
+    <body >
+		<div class="bg-img">
+        
+			 <h2 style="font-family:Lucida Handwriting" align="center" >You have been logged out successfully.</h2>
+		
+		</div>
     </body>
+	
 </html>
