--- a/flask_app/templates/products/add.html
+++ b/flask_app/templates/products/add.html
@@ -11,6 +11,7 @@
 			Brand:<input type='text' name='PBrand' value= '{{ object.data[0].PBrand }}' /> <br/>
 			Price:<input type='text' name='PPrice' value= '{{ object.data[0].PPrice }}' /> <br/>
 			Name:<input type='text' name='PName' value= '{{ object.data[0].PName }}' /> <br/>
+			Productimg:<input type='text' name='img' value= '{{ object.data[0].img }}' /> <br/>
 			Type: 
 			<select name='PType'>
 		  <option
