--- a/flask_app/templates/products/edit.html
+++ b/flask_app/templates/products/edit.html
@@ -15,6 +15,7 @@
 			Name:<input type='text' name='PName' value= '{{ object.data[0].PName }}' /> <br/>
 			Price:<input type='text' name='PPrice'/> <br/>
 			Retype-price:<input type='text' name='PPrice'/> <br/>
+			Productimg:<input type='text' name='img' value= '{{ object.data[0].img }}' /> <br/>
 		  
 		  Type: 
           <select name='PType'>
