--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <div class="bg-img">
-		<form action="/action_page.php" class="container">
+		
 		  <h1>Login</h1>
         <label for="email"><b>{{ msg }}</b></label><br>
 		
-		<form action="/login" method="POST">
+		<form action="/login" class="container" method="POST">
 		<label for="email"><b>Username</b></label>
 		<input type="text" placeholder="Enter Username" name="username" /><br>
 		<label for="pw"><b>Password</b></label>
