--- a/flask_app/templates/products/listemployee.html
+++ b/flask_app/templates/products/listemployee.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-            <div>
+            <div class="bg-img">
 				
 				<a href="products?ProductId=add">addProducts</a><br>
 				
 				{% for row in table.data %}
+				<img style='width:200px' src='static/{{ row.img }}'/>
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PName }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PPrice }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PSize }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PBrand }}</a>
-				<a href="products?ProductId={{ row.ProductId }}">{{ image_list }}</a>
 				<a href="products?task=delete&ProductId={{ row.ProductId }}">delete</a><br>
 				{% endfor %}
 			</div>
