--- a/flask_app/templates/users/edit.html
+++ b/flask_app/templates/users/edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-            <div>
+            <div class="bg-img">
 				{{ object.data[0].id }}
 			{% for error in object.errors %}
 			{{ error }}<br/>
