--- a/flask_app/templates/products/listcustomer.html
+++ b/flask_app/templates/products/listcustomer.html
@@ -10,11 +10,11 @@
 				
 				<h1> PRODUCTS</h1>
 				{% for row in table.data %}
+				<img style='width:200px' src='static/{{ row.img }}'/>
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PName }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PPrice }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PSize }}</a> 
 				<a href="products?ProductId={{ row.ProductId }}">{{ row.PBrand }}</a>
-				<a href="products?ProductId={{ row.ProductId }}">{{ image_list }}</a>
 				<a href="lineitems?lineitemId=add">Add to Cart</a><br>
 				</br>
 				{% endfor %}
