--- a/flask_app/templates/users/add.html
+++ b/flask_app/templates/users/add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-			<div>
+			<div class="bg-img">
 		{% for error in object.errors %}
 			{{ error }}<br/>
 		{% endfor %}
