--- a/flask_app/templates/users/list.html
+++ b/flask_app/templates/users/list.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-            <div>
+            <div class="bg-img">
 				
-				<a href="users?id=add">adduser</a><br>
+				<a href="users?id=add">Adduser</a><br>
 				{% for row in table.data %}
 				<a href="users?id={{ row.id }}">{{ row.email }}</a> 
 				<a href="users?task=delete&id={{ row.id }}">delete</a><br>
